@@ -1,5 +1,6 @@
 * FEA#8159 Add the configuration field "Block Indemnifications Scheduling" on claim sub status which allows blocking indemnifications scheduling on open claims
 * OTH#0000 Iteration on 7982. Set default payment journal if possible on an indemnification
+* BUG#8387 Add default value for active field on payback reason
 * OTH#0000 Only do payback reason migration for cancelled indemnifications
 * FEA#8166 Add a payback reason on claim indemnifications
 * FEA#8225 Allow to set tax_date at indemnification start
